--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,34 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0"
          metadata-complete="true">
+    <servlet>
+        <servlet-name>cookie</servlet-name>
+        <servlet-class>com.jie.servlet.CookieDemo01</servlet-class>
+    </servlet>
+    <!--            请求路径-->
+    <servlet-mapping>
+        <servlet-name>cookie</servlet-name>
+        <url-pattern>/c1</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>cookie2</servlet-name>
+        <servlet-class>com.jie.servlet.Cookdemo02</servlet-class>
+    </servlet>
+    <!--            请求路径-->
+    <servlet-mapping>
+        <servlet-name>cookie2</servlet-name>
+        <url-pattern>/c2</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>cookie3</servlet-name>
+        <servlet-class>com.jie.servlet.CookieDemo03</servlet-class>
+    </servlet>
+    <!--            请求路径-->
+    <servlet-mapping>
+        <servlet-name>cookie3</servlet-name>
+        <url-pattern>/c3</url-pattern>
+    </servlet-mapping>
+
 </web-app>
